--- a/package.json
+++ b/package.json
@@ -23,14 +23,24 @@
     "email": "david@enke.dev",
     "name": "David Enke"
   },
+  "dependencies": {
+    "flat": "5.0.2",
+    "git-config-path": "2.0.0",
+    "md5": "2.3.0",
+    "parse-git-config": "3.0.0"
+  },
   "devDependencies": {
     "@stencil/core": "2.4.0",
     "@stencil/postcss": "2.0.0",
     "@stencil/sass": "1.4.1",
+    "@types/flat": "5.0.1",
+    "@types/git-config-path": "2.0.1",
+    "@types/md5": "2.3.0",
     "@types/node": "14.14.31",
+    "@types/parse-git-config": "3.0.0",
     "autoprefixer": "10.2.4",
     "electron": "12.0.0",
-    "electron-is-dev": "2.0.0",
+    "electron-util": "0.14.2",
     "npm-run-all": "4.1.5",
     "shx": "0.3.3",
     "typescript": "4.2.2",
