--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "flat": "5.0.2",
     "git-config-path": "2.0.0",
+    "jimp": "0.16.1",
     "md5": "2.3.0",
+    "node-fetch": "2.6.1",
     "parse-git-config": "3.0.0"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "@types/flat": "5.0.1",
     "@types/git-config-path": "2.0.1",
     "@types/md5": "2.3.0",
+    "@types/node-fetch": "2.5.8",
     "@types/node": "14.14.31",
     "@types/parse-git-config": "3.0.0",
     "autoprefixer": "10.2.4",
