--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "shx rm -rf dist",
-    "prebuild": "npm run clean",
-    "build:electron": "tsc --project tsconfig.electron.json",
-    "build:stencil": "stencil build --docs",
-    "build:package": "echo \"package electron app\"",
+    "prebuild": "run-s clean",
+    "build:server": "rollup --config rollup.config.ts",
+    "build:ui": "stencil build --docs",
     "build": "run-p build:*",
-    "prestart": "npm run clean",
-    "start:electron": "tsc --project tsconfig.electron.json --watch",
-    "start:stencil": "stencil build --docs --dev --es5 --watch --serve",
-    "prestart:preview": "wait-on http://localhost:3333/index.html",
-    "start:preview": "electron ./dist",
+    "package": "electron-packager dist \"Git Profile Switch\" --out bundle --overwrite",
+    "prestart": "run-s clean",
+    "start:server": "rollup --config rollup.config.ts --watch",
+    "start:ui": "stencil build --docs --dev --es5 --watch --serve",
+    "start:preview:wait:ui": "wait-on http://localhost:3333/index.html",
+    "start:preview:wait:server": "wait-on dist/main.js dist/preload.js",
+    "start:preview:server": "electron dist",
+    "start:preview": "run-s start:preview:wait:* start:preview:server",
     "start": "run-p start:*",
     "test": "stencil test --spec --e2e",
     "test:watch": "stencil test --spec --e2e --watchAll"
@@ -24,14 +26,19 @@
     "name": "David Enke"
   },
   "dependencies": {
+    "electron-util": "0.14.2",
     "flat": "5.0.2",
     "git-config-path": "2.0.0",
-    "jimp": "0.16.1",
     "md5": "2.3.0",
     "node-fetch": "2.6.1",
-    "parse-git-config": "3.0.0"
+    "parse-git-config": "3.0.0",
+    "pngjs": "6.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "17.1.0",
+    "@rollup/plugin-json": "4.1.0",
+    "@rollup/plugin-node-resolve": "11.2.0",
+    "@rollup/plugin-typescript": "8.2.0",
     "@stencil/core": "2.4.0",
     "@stencil/postcss": "2.0.0",
     "@stencil/sass": "1.4.1",
@@ -41,11 +48,14 @@
     "@types/node-fetch": "2.5.8",
     "@types/node": "14.14.31",
     "@types/parse-git-config": "3.0.0",
+    "@types/pngjs": "6.0.0",
     "autoprefixer": "10.2.4",
     "electron": "12.0.0",
-    "electron-util": "0.14.2",
+    "electron-packager": "15.2.0",
     "npm-run-all": "4.1.5",
+    "rollup": "2.40.0",
     "shx": "0.3.3",
+    "tslib": "2.1.0",
     "typescript": "4.2.2",
     "wait-on": "5.2.1"
   },
