--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "flat": "5.0.2",
     "git-config-path": "2.0.0",
     "md5": "2.3.0",
+    "mkdirp": "1.0.4",
     "node-fetch": "2.6.1",
     "parse-git-config": "3.0.0",
     "pngjs": "6.0.0"
@@ -45,6 +46,7 @@
     "@types/flat": "5.0.1",
     "@types/git-config-path": "2.0.1",
     "@types/md5": "2.3.0",
+    "@types/mkdirp": "1.0.1",
     "@types/node-fetch": "2.5.8",
     "@types/node": "14.14.31",
     "@types/parse-git-config": "3.0.0",
