--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     ],
     "moduleResolution": "node",
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "resolveJsonModule": true
   }
 }
