--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": false,
     "declaration": false,
+    "downlevelIteration": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "jsx": "react",
