--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "electron-util": "0.14.2",
+    "glob": "7.1.6",
     "jpeg-js": "0.4.3",
     "md5": "2.3.0",
     "mkdirp": "1.0.4",
@@ -41,6 +42,7 @@
     "@stencil/core": "2.4.0",
     "@stencil/postcss": "2.0.0",
     "@stencil/sass": "1.4.1",
+    "@types/glob": "7.1.3",
     "@types/md5": "2.3.0",
     "@types/mkdirp": "1.0.1",
     "@types/node-fetch": "2.5.8",
