--- a/package.json
+++ b/package.json
@@ -26,38 +26,39 @@
     "name": "David Enke"
   },
   "dependencies": {
-    "electron-store": "7.0.2",
-    "electron-util": "0.14.2",
-    "glob": "7.1.6",
+    "electron-store": "8.0.1",
+    "electron-util": "0.17.2",
+    "glob": "7.2.0",
     "jpeg-js": "0.4.3",
     "md5": "2.3.0",
     "mkdirp": "1.0.4",
-    "node-fetch": "2.6.1",
+    "node-fetch": "3.2.2",
     "pngjs": "6.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "17.1.0",
+    "@rollup/plugin-commonjs": "21.0.2",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "11.2.0",
-    "@rollup/plugin-typescript": "8.2.0",
-    "@stencil/core": "2.4.0",
-    "@stencil/postcss": "2.0.0",
-    "@stencil/sass": "1.4.1",
-    "@types/glob": "7.1.3",
-    "@types/md5": "2.3.0",
-    "@types/mkdirp": "1.0.1",
-    "@types/node-fetch": "2.5.8",
-    "@types/node": "14.14.31",
-    "@types/pngjs": "6.0.0",
-    "autoprefixer": "10.2.4",
-    "electron": "12.0.0",
-    "electron-packager": "15.2.0",
+    "@rollup/plugin-node-resolve": "13.1.3",
+    "@rollup/plugin-typescript": "8.3.1",
+    "@stencil/core": "2.14.2",
+    "@stencil/postcss": "2.1.0",
+    "@stencil/sass": "1.5.2",
+    "@types/glob": "7.2.0",
+    "@types/md5": "2.3.2",
+    "@types/mkdirp": "1.0.2",
+    "@types/node-fetch": "2.6.1",
+    "@types/node": "16.11.7",
+    "@types/pngjs": "6.0.1",
+    "autoprefixer": "10.4.2",
+    "electron": "17.1.2",
+    "electron-packager": "15.4.0",
     "npm-run-all": "4.1.5",
-    "rollup": "2.40.0",
-    "shx": "0.3.3",
-    "tslib": "2.1.0",
-    "typescript": "4.2.2",
-    "wait-on": "5.2.1"
+    "postcss": "8.4.8",
+    "rollup": "2.70.0",
+    "shx": "0.3.4",
+    "tslib": "2.3.1",
+    "typescript": "4.6.2",
+    "wait-on": "6.0.1"
   },
   "license": "MIT"
 }
