--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "autoprefixer": "10.4.2",
     "electron": "17.1.2",
     "electron-packager": "15.4.0",
+    "electron-reload": "2.0.0-alpha.1",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.8",
     "rollup": "2.70.0",
