--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "name": "David Enke"
   },
   "dependencies": {
-    "electron-store": "8.0.1",
+    "electron": "17.1.2",
     "electron-util": "0.17.2",
     "glob": "7.2.0",
     "jpeg-js": "0.4.3",
+    "lodash-es": "4.17.21",
     "md5": "2.3.0",
     "mkdirp": "1.0.4",
     "node-fetch": "3.2.2",
@@ -44,13 +45,13 @@
     "@stencil/postcss": "2.1.0",
     "@stencil/sass": "1.5.2",
     "@types/glob": "7.2.0",
+    "@types/lodash-es": "4.17.6",
     "@types/md5": "2.3.2",
     "@types/mkdirp": "1.0.2",
     "@types/node-fetch": "2.6.1",
     "@types/node": "16.11.7",
     "@types/pngjs": "6.0.1",
     "autoprefixer": "10.4.2",
-    "electron": "17.1.2",
     "electron-packager": "15.4.0",
     "electron-reload": "2.0.0-alpha.1",
     "npm-run-all": "4.1.5",
