--- a/tsconfig.stencil.json
+++ b/tsconfig.stencil.json
@@ -1,8 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "esnext",
-    "target": "es2017"
+    "module": "esnext"
   },
   "include": [
     "src"
