--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "electron": "17.1.2",
     "electron-util": "0.17.2",
-    "glob": "7.2.0",
+    "fast-glob": "3.2.11",
     "jpeg-js": "0.4.3",
     "lodash-es": "4.17.21",
     "md5": "2.3.0",
@@ -44,7 +44,6 @@
     "@stencil/core": "2.14.2",
     "@stencil/postcss": "2.1.0",
     "@stencil/sass": "1.5.2",
-    "@types/glob": "7.2.0",
     "@types/lodash-es": "4.17.6",
     "@types/md5": "2.3.2",
     "@types/mkdirp": "1.0.2",
