added creation and removal of profiles (draft)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "dom",
       "es2015"
     ],
+    "module": "esnext",
     "moduleResolution": "node",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
