added electron installer

--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "build:server": "rollup --config rollup.config.ts",
     "build:ui": "stencil build --docs",
     "build": "run-p build:*",
-    "package": "electron-packager dist \"Git Profile Switch\" --out bundle --overwrite --all",
+    "package:bundles": "electron-packager dist \"Git Profile Switch\" --out bundle --overwrite --all",
+    "package:installer:win32-arm64": "electron-installer-windows --src \"bundle/Git Profile Switch-win32-arm64/\" --dest \"bundle/Git Profile Switch-win32-arm64-installer/\" --options.exe \"Git Profile Switch.exe\"",
+    "package:installer:win32-ia32": "electron-installer-windows --src \"bundle/Git Profile Switch-win32-ia32/\" --dest \"bundle/Git Profile Switch-win32-ia32-installer/\" --options.exe \"Git Profile Switch.exe\"",
+    "package:installer:win32-x64": "electron-installer-windows --src \"bundle/Git Profile Switch-win32-x64/\" --dest \"bundle/Git Profile Switch-win32-x64-installer/\" --options.exe \"Git Profile Switch.exe\"",
+    "package:installers": "run-p package:installer:*",
+    "package": "run-s package:*",
     "prestart": "run-s clean",
     "start:server": "rollup --config rollup.config.ts --watch",
     "start:ui": "stencil build --docs --dev --es5 --watch --serve",
@@ -51,6 +56,7 @@
     "@types/node": "16.11.7",
     "@types/pngjs": "6.0.1",
     "autoprefixer": "10.4.2",
+    "electron-installer-windows": "3.0.0",
     "electron-packager": "15.4.0",
     "electron-reload": "2.0.0-alpha.1",
     "npm-run-all": "4.1.5",
