chore: aligned types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
+    "lib": ["DOM", "ES2022"],
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "strict": true,
     "target": "ES2022"
-  }
+  },
+  "include": ["src", "tools", "globals.d.ts"]
 }
